# srt-translator

./: LICENSE  README.md  pyproject.toml
src/: srt_translation.py
src/srt_translator/: cli.py  translate.py
src/srt_translator/translator/: __init__.py  base.py  llm_translator.py  util.py
